# SimpleQuad

./: .clang-format  .gitignore  README.md  arduino-cli.yaml  arduino-cli_old.yaml  build.py  build_imu_id_teensy.sh  build_imu_vicon.sh  build_latency_id_teensy.sh  build_lora_relay.sh  build_motor_teensy.sh  build_test.sh  lora_latency_test_in.txt  lora_latency_test_out.txt
--library/: build.options.json
--library/sketch/: imu_vicon_feather.ino.cpp  imu_vicon_relay.cpp  imu_vicon_relay.hpp
cmake/: Functions.cmake
src/Arduino/feather_parrot/: feather_parrot.ino
src/Arduino/libraries/RExQuad/: arduino_receiver.cpp  arduino_receiver.hpp  constants.hpp  motors.cpp  motors.hpp  serial_utils.cpp  serial_utils.hpp
src/Arduino/lora_relay/: lora_relay.ino
src/Arduino/lora_rx/: lora_rx.ino
src/Arduino/lora_rx_serial/: lora_rx_serial.ino
src/Arduino/lora_tx/: lora_tx.ino
src/Arduino/lora_tx_latency/: lora_tx_latency.ino
src/Arduino/lora_tx_serial/: lora_tx_serial.ino
src/auto_gen/: compute_K.jl  gains.json  hover_inputs.json  quad_dynamics.jl  simulate_latency.jl
src/common/: CMakeLists.txt  README  pose.cpp  pose.hpp  utils.cpp  utils.hpp
src/core/: CMakeLists.txt  arduino_receiver.hpp  pose.cpp  pose.hpp  serial.cpp  utils.cpp  utils.hpp
src/imu_id_teensy/: README.md  delim_file.csv  imu_id_teensy.ino  imu_recorder.jl
src/imu_vicon_feather/: imu.ino  imu_vicon_feather.ino  imu_vicon_relay copy.hpp  imu_vicon_relay.cpp  imu_vicon_relay.hpp  pose.hpp
src/imu_vicon_feather/src/imu_vicon/: calibrate.cpp  imu_vicon.cpp  imu_vicon.hpp  pose.hpp
src/imu_vicon_feather/src/kalman/: eigen_utils.h  forward_diff.hpp  kalman.cpp  kalman.hpp  quat_math.h
src/imu_vicon_feather/src/kalman/util/: eigen_utils.h  quad_model.h  quad_types.h  quaternion_diff.h
src/imu_vicon_feather/src/quadrotor_model/: quadrotor_model.hpp
src/imu_vicon_feather/test/: CMakeLists.txt  imu_vicon_test.cpp
src/latency_id_teensy/: latency_id_teensy.ino  utils.hpp
src/latency_id_teensy/src/control/: control.cpp  control.hpp  motor_commands.cpp  quaternion_diff.hpp
src/latency_id_teensy/src/kalman/: kalman.hpp
src/latency_id_teensy/src/kalman/util/: imu_vicon_types.hpp
src/lora_relay/: lora_relay.ino
src/mocap/: CMakeLists.txt  Mocap.cpp  Mocap.hpp  callbacks.cpp  callbacks.hpp  mocap.cpp  pose.cpp  pose.hpp  utils.cpp  utils.hpp
src/mocap/test/: CMakeLists.txt  latency.jl  lora_latency.cpp  lora_latency_analysis.jl  lora_latency_test_in.txt  lora_latency_test_out.txt  pose_test.cpp  send_to_feather.cpp  serial_chain_latency.cpp  serial_chain_latency_test_in.txt  serial_chain_latency_test_out.txt  serial_latency.cpp  serial_latency_test_in.txt  serial_latency_test_out.txt  serial_test.cpp
src/motor_teensy/: motor_teensy.ino  utils.hpp
src/motor_teensy/src/control/: control.cpp  control.hpp  lqr.hpp  motor_commands.cpp  quaternion_diff.h
src/motor_teensy/src/kalman/: kalman.hpp
src/motor_teensy/src/kalman/util/: eigen_utils.h  eigen_utils.hpp  imu_vicon_model.h  imu_vicon_model.hpp  imu_vicon_types.h
src/motor_teensy/test/: CMakeLists.txt  motor_teensy_test.cpp
src/utility/slap/: linalg.c
src/utility/vicon_packet/: imu_vicon_relay.cpp  imu_vicon_relay.hpp
src/utils/: CMakeLists.txt  serial.cpp  serial.hpp
